fix: z-index

--- a/packages/global-navigation/src/components/molecules/SearchDrawer/SearchDrawer.css
+++ b/packages/global-navigation/src/components/molecules/SearchDrawer/SearchDrawer.css
@@ -30,6 +30,7 @@
   max-height: calc(100vh - 80px);
   transform: translateY(calc(-100% - 8px));
   transition: transform 0.6s cubic-bezier(0.86, 0, 0.07, 1);
+  z-index: 1;
 
   .search-panel__input-container {
     display: flex;
